Modularize SmallRye Config
Introduce module descriptors for all components of SmallRye Config. Fixes #644.